# TRUGS-AGENT

./: .cursorrules  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  NOTICE  README.md  SECURITY.md  folder.trug.json
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
AAA/: AAA_REFERENCE_for_LLM.trug.json  AGENT.md  EXAMPLE_email_mcp.md  GUIDE_aaa_workflow_for_llm_agents.md  README.md
BROCHURE/: brochure.md
EPIC/: AGENT.md  EXAMPLE_project.trug.json
EXAMPLES/: AAA_email_mcp.md  AAA_email_mcp.trug.json
FOLDER/: AGENT.md  EXAMPLE_folder.trug.json  README.md
MEMORY/: AGENT.md  EXAMPLE_MEMORY.md
NDA/: AAA_nda_draft.md  AGENT.md  EXAMPLE_nda_mutual.md  MEMORY.md  NDA_mutual_trugs_llc.md  README.md  epic.trug.json  folder.trug.json  nda.trug.json  web.trug.json
PROPOSAL/: PROPOSAL_1432_book_graph_first_development_with_trugs_developer_tutorial.md
REFERENCE/: PAPER_dark_code.md
SKILLS/: AGENT.md  README.md  (+1 more)
installers/pip/: README.md  pyproject.toml
installers/pip/src/trugs_agent/: __init__.py  cli.py
installers/pip/src/trugs_agent/templates/: AGENT.md
installers/pip/src/trugs_agent/templates/AAA/: EXAMPLE_email_mcp.md
installers/pip/src/trugs_agent/templates/EPIC/: README.md
installers/pip/src/trugs_agent/templates/FOLDER/: README.md
installers/pip/src/trugs_agent/templates/MEMORY/: README.md
installers/pip/src/trugs_agent/templates/TRUGGING/: EXAMPLE_auth_module.md
installers/pip/src/trugs_agent/templates/WEB_HUB/: AGENT.md
installers/pip/src/trugs_agent/templates/tools/: test_validate.py  validate.py
(+32 files in other folders)
