[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trugs-agent"
version = "1.0.0"
description = "Initialize TRUGS Agent in your project — a 190-word formal instruction language for LLM coding assistants"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "TRUGS LLC" }
]
keywords = [
    "trugs", "trl", "llm", "ai-agents", "claude-code",
    "cursor", "copilot", "developer-tools", "prompt-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"

[project.scripts]
trugs-agent-init = "trugs_agent.cli:main"

[project.urls]
Homepage = "https://github.com/TRUGS-LLC/TRUGS-AGENT"
Repository = "https://github.com/TRUGS-LLC/TRUGS-AGENT"
Issues = "https://github.com/TRUGS-LLC/TRUGS-AGENT/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trugs_agent = ["templates/**/*"]
